src/objects/Customer_Owned_Unit__c.object
<CustomObject>
    <fields>
        <fullName>Submodel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sub model of unit</description>
        <label>Unit SubModel</label>
        <referenceTo>Unit_Model__c</referenceTo>
        <relationshipLabel>Customer Owned Units (Submodel)</relationshipLabel>
        <relationshipName>Customer_Owned_Units1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Suggested_Price__c</fullName>
        <label>Suggested Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Suspension__c</fullName>
        <label>Suspension</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SyncToken__c</fullName>
        <label>SyncToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_Token_Category__c</fullName>
        <label>Sync Token - Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_Token_For_Consignment__c</fullName>
        <label>Sync Token For Consignment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_Token_For_NITC_JE__c</fullName>
        <label>Sync Token For NITC JE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_Token_For_Unit_Invoice_JE__c</fullName>
        <description>Sync Token For Unit Invoice JE</description>
        <label>Sync Token For Unit Invoice JE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is unit taxable or not</description>
        <label>Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Taxable_Cost__c</fullName>
        <label>Taxable Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tilt__c</fullName>
        <label>Tilt</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tire_Load_Range__c</fullName>
        <label>Tire Load Range</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tire_Size__c</fullName>
        <label>Tire Size</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tire_Type__c</fullName>
        <label>Tire Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tongue__c</fullName>
        <label>Tongue</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Base_Unit_Price__c</fullName>
        <description>Price total of all Base Units related to this unit.</description>
        <label>Total Base Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Base_Units_Cost__c</fullName>
        <description>Total Base unit cost</description>
        <label>Total Base Units Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost_With_Tax__c</fullName>
        <formula>IF(ISNULL(Overridden_Total_Cost_With_Tax__c), ( IF(ISNULL(Total_Cost__c ), 0, Total_Cost__c ) +  IF(ISNULL(Tax_Amount__c), 0, Tax_Amount__c) ), Overridden_Total_Cost_With_Tax__c)</formula>
        <label>Total Cost With Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <description>Total Cost</description>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Dealer_Options_Cost__c</fullName>
        <description>Total Dealer Options Cost</description>
        <label>Total Dealer Options Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Dealer_Options_Price__c</fullName>
        <description>Price Total of all Dealer Options related to this unit.</description>
        <label>Total Dealer Options Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Factory_Options_Cost__c</fullName>
        <description>Total Factory Options Cost</description>
        <label>Total Factory Options Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Factory_Options_Price__c</fullName>
        <description>Total Factory Options Price</description>
        <label>Total Factory Options Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <description>Total Price</description>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Towing_Capacity__c</fullName>
        <label>Towing Capacity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Track_Size__c</fullName>
        <label>Track Size</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trade_In_Value__c</fullName>
        <description>net of sales tax</description>
        <label>Trade In Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitId__c</fullName>
        <description>This field will have Unit Id fully generated</description>
        <label>UnitId</label>
        <length>155</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unit_Data_01__c</fullName>
        <label>Unit Data 01</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unit_Data_02__c</fullName>
        <label>Unit Data 02</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unit_Data_03__c</fullName>
        <label>Unit Data 03</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unit_Id__c</fullName>
        <description>This will be used for Generating unit Id</description>
        <label>Unit Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unit_Make__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Make of unit</description>
        <label>Unit Make</label>
        <referenceTo>Unit_Make__c</referenceTo>
        <relationshipLabel>Customer Owned Units</relationshipLabel>
        <relationshipName>Customer_Owned_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Model of unit</description>
        <label>Unit Model</label>
        <referenceTo>Unit_Model__c</referenceTo>
        <relationshipLabel>Customer Owned Units</relationshipLabel>
        <relationshipName>Customer_Owned_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Number__c</fullName>
        <formula>IF( Unit_Id__c != null, Unit_Id__c , Stock_Id__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Type__c</fullName>
        <description>Types of units</description>
        <label>Unit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>COU</fullName>
                </value>
                <value>
                    <fullName>STOCK</fullName>
                </value>
                <value>
                    <fullName>ORDU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit#</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIN_Number_Formula__c</fullName>
        <formula>IF( ISBLANK(VIN_Number__c), &apos;VIN Unknown&apos;, VIN_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VIN Number Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIN_Number__c</fullName>
        <description>This VIN number is used. Please ignore previous VIN__c.</description>
        <label>VIN Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <description>Vehicle Identification Number</description>
        <label>VIN</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Is_Vendor__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Owned Units (Vendor)</relationshipLabel>
        <relationshipName>Customer_Owned_Units1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wheel_Base__c</fullName>
        <label>Wheel Base</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wheel_Box_Height__c</fullName>
        <label>Wheel Box Height</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wheel_Box_Width__c</fullName>
        <label>Wheel Box Width</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wheel_Type__c</fullName>
        <label>Wheel Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Width_Interior__c</fullName>
        <label>Width Interior</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Width_Overall__c</fullName>
        <label>Width Overall</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <label>Width</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Windshield__c</fullName>
        <label>Windshield</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X_12v_Connection__c</fullName>
        <label>12v Connection</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xero_Accounting_Id_Unit_Invoice_JE__c</fullName>
        <label>Xero Accounting Id Unit Invoice JE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xero_Accounting_Id__c</fullName>
        <label>Xero Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xero_Consignment_Accounting_Id__c</fullName>
        <label>Xero Consignment Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xero_JE_Accounting_Id__c</fullName>
        <label>Xero JE Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xero_NITC_JE_Accounting_Id__c</fullName>
        <label>Xero NITC JE Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_As_String__c</fullName>
        <formula>TEXT(Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year As String</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Model year of the unit</description>
        <label>Unit Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>accountingLastSyncTime__c</fullName>
        <label>accountingLastSyncTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>availForQBSync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>availForQBSync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FX_Conversion_Rate__c</fullName>
        <defaultValue>0.0000</defaultValue>
        <description>Once the unit has been received we need to be able to store the conversion rate used to generate the stock unit.</description>
        <inlineHelpText>Once the unit has been received we need to be able to store the conversion rate used to generate the stock unit.</inlineHelpText>
        <label>FX Conversion Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Backward_Conversion_Rate__c</fullName>
        <description>Backward Conversion Rate With Markup</description>
        <formula>if((ISNULL(FX_Conversion_Rate__c) || FX_Conversion_Rate__c = 0),1,1/FX_Conversion_Rate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Backward Conversion Rate With Markup</inlineHelpText>
        <label>Backward Conversion Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <label>Customer Owned Unit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>VIN_Number__c</columns>
        <columns>Unit_Id__c</columns>
        <columns>Unit_Type__c</columns>
        <columns>Stock_Id__c</columns>
        <columns>Unit_Make__c</columns>
        <columns>Unit_Model__c</columns>
        <columns>Submodel__c</columns>
        <columns>Sub_Model__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Async_QB_Units</fullName>
        <columns>NAME</columns>
        <columns>Unit_Id__c</columns>
        <columns>Make_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>availForQBSync__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Async QB Units</label>
    </listViews>
    <listViews>
        <fullName>Stock_Unit</fullName>
        <columns>NAME</columns>
        <columns>Unit_Number__c</columns>
        <columns>Max_Stock_Count__c</columns>
        <columns>Max_COU_Count__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Unit_Type__c</field>
            <operation>equals</operation>
            <value>STOCK</value>
        </filters>
        <label>Stock Unit</label>
    </listViews>
    <listViews>
        <fullName>Async_Xero_Stock_Unit_Category</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Total_Cost__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Available_For_Xero_JE_Sync__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Async Xero Stock Unit Category</label>    
    </listViews>
    <listViews>
        <fullName>Async_Xero_Unit_Invoice_JE</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Available_For_Xero_Unit_Invoice_JE_Sync__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Async Xero Unit Invoice JE</label>
    </listViews>
    <listViews>
        <fullName>Async_Xero_Unit_Invoice</fullName>
        <columns>NAME</columns>
        <columns>Total_Cost__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Available_For_Xero_Sync__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Async Xero Unit Invoice</label>
    </listViews>
    <nameField>
        <displayFormat>COU-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Owned Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>